# ai-assistant

./: .env.example  .gitattributes  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
ai_assistant/: __init__.py  __main__.py  bot.py  settings.py
ai_assistant/commands/: __init__.py  _entry.py  _lazy.py  _macos_rtsock.py  _pth_patch.py  adb.py  agent_bark_notify.py  aliyun_oss.py  bump_version.py  cloudflare_dns.py  cookies.py  disable_ssl_verify.py  docker.py  git_download.py  greader.py  handoff.py  httpx_disable_verify.py  httpx_rfc_cache.py  lan_ddns.py  main.py  mcp_cli.py  opml.py  plugins.py  pypi_mirror.py  pypi_upload.py  reality.py  realm.py  requests_disable_verify.py  route.py  similar_questions.py  ssl.py  stash_log.py  tg_bot_click.py  udp.py  uv_tool.py  uvx_gh.py  win_env.py
ai_assistant/commands/agent/: mcd.py
ai_assistant/commands/automation/: cloudflare_tunnel_watcher.py  docker_hub_runner.py  file_change_runner.py  freshrss.py
ai_assistant/commands/cursor/: usage.py
ai_assistant/commands/ghi/: main.py  release.py
ai_assistant/example/feishu/: event.py
ai_assistant/example/pandatest/: poc.py
ai_assistant/lib/: oss_sync.py
ai_assistant/lib/pandatest/: client.py  device.py
docs/: COMMANDS.md
docs/design/: twitter-cli-cookies.md
plugins/agent-bark-notify-claude/.claude-plugin/: plugin.json
plugins/agent-bark-notify-claude/hooks/: hooks.json
plugins/agent-bark-notify-codex/.codex-plugin/: plugin.json
plugins/agent-bark-notify-codex/hooks/: hooks.json
plugins/agent-bark-notify-openclaw/: index.js  index.ts  openclaw.plugin.json  package.json
tests/: agent_bark_notify_install_test.py  agent_bark_notify_test.py  bump_version_test.py  cloudflare_dns_test.py  disable_verify_test.py  docker_hub_runner_test.py  docker_test.py  freshrss_test.py  git_download_test.py  httpx_rfc_cache_test.py  lan_ddns_test.py  main_test.py  plugin_manifest_test.py  plugins_command_test.py  pypi_mirror_test.py  pypi_upload_test.py  reality_test.py  route_test.py  ssl_test.py  tg_bot_click_test.py  uvx_gh_test.py  win_env_test.py
