[project]
name = "ai-assistant"
version = "0.3.0"
description = "Toolkit for ai usage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.28.1",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "typer>=0.12",
    "watchfiles>=1.1.1",
    "xmltodict>=1.0.2",
    "rich>=13.0",
    "tomlkit>=0.13",
    "tqdm>=4.67",
    "twine>=5.0",
    "psutil>=5.9",
    "pyobjc-framework-Cocoa>=10.3 ; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.3 ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
mcd = ["openai>=2.14.0"]
oss = ["oss2>=2.18.0"]
freshrss = ["sqlalchemy>=2.0.48", "pymysql>=1.1.2", "psycopg[binary]>=3.3.3"]
docker = ["docker>=7.1.0"]
cookies = ["browser-cookie3>=0.16.6"]
cursor = ["matplotlib>=3.10.8", "pandas>=2.3.3"]
all = ["ai-assistant[mcd,oss,freshrss,docker,cookies,cursor]"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "mypy>=1.19",
    "pandas-stubs>=2.3.3.260113",
    "types-requests",
    "types-xmltodict",
]

[project.scripts]
ai-assistant = "ai_assistant.commands.main:cmd"
ghi = "ai_assistant.commands.ghi.main:cmd"

[tool.hatch.build.targets.wheel]
packages = ["ai_assistant"]
exclude = ["ai_assistant/example/**"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 200
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
# docstring-code-line-length = "dynamic"
[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ['^venv/', '^__init__\.py$']
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["browser-cookie3"]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pytest.ini_options]
markers = []

[tool.isort]
profile = "hug"
